--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -415,6 +415,20 @@
       width: 100%;
     }
   }
+
+  /* Scroll offset for anchor links to account for fixed header */
+section[id],
+div[id] {
+  scroll-margin-top: 85px; /* navbar height (70px) + 15px buffer */
+}
+
+/* Alternative: if your sections use specific IDs */
+#how-it-works,
+#features,
+#pricing,
+#faq {
+  scroll-margin-top: 85px;
+}
 </style>
 
 <script>
