--- a/sections/indicators.liquid
+++ b/sections/indicators.liquid
@@ -62,6 +62,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: left center;
     border-radius: 16px;
   }
 </style>
